@@ -8,6 +8,7 @@ nagvis (1:1.5.10-1) UNRELEASED; urgency=low
   * removed patches/php5.3-deprecated-ereg.dpatch; applied upstream
   * removed patches/fix-get_class-object.dpatch; no longer needed
   * removed patches/visibility_magic-set-method.dpatch; no longer needed
+  * rework debian/rules and install files
 
  -- Alexander Reichle-Schmehl <tolimar@debian.org>  Mon, 26 Sep 2011 15:51:49 +0200
 
